# conversion

./: Cargo.toml  README.md
.github/workflows/: lint.yml  test.yml
src/: converter.rs  error.rs  infallible.rs  iter.rs  iterator.rs  lib.rs  stream.rs
src/converter/: chained.rs  encoding.rs  exact.rs  into.rs  iter.rs  map.rs
src/converter/encoding/: ascii.rs  utf16.rs  utf32.rs  utf8.rs
src/iter/: tryiter.rs
src/iterator/: tryiterator.rs
src/stream/: trystream.rs
