[package]
name = "conversion"
version = "0.0.1"
description = "An abstraction crate to convert iterators on the fly."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/convert-iterator"
keywords = ["iterator", "stream", "conversion"]
categories = ["encoding"]
license = "MIT"
readme = "README.md"
edition = "2021"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]
async = ["alloc", "futures-core", "pin-project-lite"]
std = ["alloc"]
alloc = []
nightly = []

[dependencies]
pin-project-lite = { version = "0.2", optional = true }

[dependencies.futures-core]
version = "0.3"
default-features = false
optional = true
